safara hitlist overflow issue fix

--- a/dashboard/css/hitlist.css
+++ b/dashboard/css/hitlist.css
@@ -55,7 +55,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  /* height: 100%; */
   min-height: 180px;
   grid-auto-rows: minmax(180px, auto);
   position: relative;
